--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -15,6 +15,13 @@
   
   <dependencies>
   
+  <!-- Link BackEnd Project -->
+  <dependency>
+  <groupId>net.kzn</groupId>
+  <artifactId>shoppingbackend</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  </dependency>
+  
   <!-- JAVA EE API -->
 <dependency>
     <groupId>javax</groupId>
